{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 606,
  "lineage": "3316c799-bffc-e16f-8f81-9ede56c08e63",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "global",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/asia-east1/networkEndpointGroups/asia-east1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/asia-east2/networkEndpointGroups/asia-east2",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/asia-northeast1/networkEndpointGroups/asia-northeast1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/asia-northeast2/networkEndpointGroups/asia-northeast2",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/asia-northeast3/networkEndpointGroups/asia-northeast3",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/asia-south1/networkEndpointGroups/asia-south1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/asia-south2/networkEndpointGroups/asia-south2",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/asia-southeast1/networkEndpointGroups/asia-southeast1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/asia-southeast2/networkEndpointGroups/asia-southeast2",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/australia-southeast1/networkEndpointGroups/australia-southeast1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/australia-southeast2/networkEndpointGroups/australia-southeast2",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/europe-central2/networkEndpointGroups/europe-central2",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/europe-north1/networkEndpointGroups/europe-north1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/europe-west1/networkEndpointGroups/europe-west1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/europe-west2/networkEndpointGroups/europe-west2",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/europe-west3/networkEndpointGroups/europe-west3",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/europe-west4/networkEndpointGroups/europe-west4",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/europe-west6/networkEndpointGroups/europe-west6",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/northamerica-northeast1/networkEndpointGroups/northamerica-northeast1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/southamerica-east1/networkEndpointGroups/southamerica-east1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/us-central1/networkEndpointGroups/us-central1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/us-east1/networkEndpointGroups/us-east1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/us-east4/networkEndpointGroups/us-east4",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/us-west1/networkEndpointGroups/us-west1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/us-west2/networkEndpointGroups/us-west2",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/us-west3/networkEndpointGroups/us-west3",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/gcping/regions/us-west4/networkEndpointGroups/us-west4",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2020-12-19T06:08:28.373-08:00",
            "enable_cdn": true,
            "fingerprint": "G2xb8bm0ewo=",
            "id": "projects/gcping/global/backendServices/global",
            "load_balancing_scheme": "EXTERNAL",
            "name": "global",
            "port_name": "http",
            "project": "gcping",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcping/global/backendServices/global",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.google_cloud_run_locations.available",
            "google_cloud_run_service.regions",
            "google_compute_region_network_endpoint_group.regions",
            "google_project_service.compute",
            "google_project_service.run",
            "google_service_account.minimal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "global",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.244.234.69",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-12-19T06:07:49.629-08:00",
            "id": "projects/gcping/global/addresses/address",
            "name": "address",
            "prefix_length": 0,
            "project": "gcping",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcping/global/addresses/address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "global",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/gcping/global/forwardingRules/global",
            "ip_address": "35.244.234.69",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "global",
            "port_range": "443-443",
            "project": "gcping",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcping/global/forwardingRules/global",
            "target": "https://www.googleapis.com/compute/v1/projects/gcping/global/targetHttpsProxies/global"
          },
          "dependencies": [
            "data.google_cloud_run_locations.available",
            "google_cloud_run_service.regions",
            "google_compute_backend_service.global",
            "google_compute_global_address.global",
            "google_compute_managed_ssl_certificate.global",
            "google_compute_region_network_endpoint_group.regions",
            "google_compute_target_https_proxy.global",
            "google_compute_url_map.global",
            "google_project_service.compute",
            "google_project_service.run",
            "google_service_account.minimal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/gcping/global/forwardingRules/https-redirect",
            "ip_address": "35.244.234.69",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "https-redirect",
            "port_range": "80-80",
            "project": "gcping",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcping/global/forwardingRules/https-redirect",
            "target": "https://www.googleapis.com/compute/v1/projects/gcping/global/targetHttpProxies/https-redirect"
          },
          "dependencies": [
            "google_compute_global_address.global",
            "google_compute_target_http_proxy.https_redirect",
            "google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-12-19T06:08:15.062-08:00",
            "id": "projects/gcping/global/targetHttpProxies/https-redirect",
            "name": "https-redirect",
            "project": "gcping",
            "proxy_id": 1563228794946566048,
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcping/global/targetHttpProxies/https-redirect",
            "url_map": "https://www.googleapis.com/compute/v1/projects/gcping/global/urlMaps/https-redirect"
          },
          "dependencies": [
            "google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "global",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-12-19T06:09:01.457-08:00",
            "id": "projects/gcping/global/targetHttpsProxies/global",
            "name": "global",
            "project": "gcping",
            "proxy_id": 4142560332133676946,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcping/global/targetHttpsProxies/global",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/gcping/global/sslCertificates/global"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/gcping/global/urlMaps/global"
          },
          "dependencies": [
            "data.google_cloud_run_locations.available",
            "google_cloud_run_service.regions",
            "google_compute_backend_service.global",
            "google_compute_managed_ssl_certificate.global",
            "google_compute_region_network_endpoint_group.regions",
            "google_compute_url_map.global",
            "google_project_service.compute",
            "google_project_service.run",
            "google_service_account.minimal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "global",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-12-19T06:08:50.042-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/gcping/global/backendServices/global",
            "default_url_redirect": [],
            "description": "a description",
            "fingerprint": "g0m7oxw31II=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/gcping/global/urlMaps/global",
            "map_id": 2821179803471951773,
            "name": "global",
            "path_matcher": [],
            "project": "gcping",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcping/global/urlMaps/global",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_cloud_run_locations.available",
            "google_cloud_run_service.regions",
            "google_compute_backend_service.global",
            "google_compute_region_network_endpoint_group.regions",
            "google_project_service.compute",
            "google_project_service.run",
            "google_service_account.minimal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-12-19T06:07:49.610-08:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "gdIP50PddU4=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/gcping/global/urlMaps/https-redirect",
            "map_id": 2724298007132747738,
            "name": "https-redirect",
            "path_matcher": [],
            "project": "gcping",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcping/global/urlMaps/https-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}